--- a/app/marketplace/marketplace.module.css
+++ b/app/marketplace/marketplace.module.css
@@ -31,15 +31,15 @@
   content: '';
   position: absolute;
   top: 0;
-  right: -60px;
+  right: 0;
   bottom: 0;
-  width: 52%;
-  background-image: url('https://images.unsplash.com/photo-1527058918112-6e17a8213943?w=1000&q=75&fit=crop&auto=format');
+  width: 48%;
+  background-image: url('https://images.unsplash.com/photo-1527058918112-6e17a8213943?w=1000&q=80&fit=crop&auto=format');
   background-size: cover;
   background-position: center 60%;
-  opacity: 0.18;
-  mask-image: linear-gradient(to left, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 100%);
-  -webkit-mask-image: linear-gradient(to left, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 100%);
+  opacity: 0.42;
+  mask-image: linear-gradient(to left, rgba(0,0,0,1) 30%, rgba(0,0,0,0) 100%);
+  -webkit-mask-image: linear-gradient(to left, rgba(0,0,0,1) 30%, rgba(0,0,0,0) 100%);
 }
 
 .heroInner {
